compiler/src/llparser.rs
use crate::ast::{Ast, RelationOp};
use crate::error::{CompilerError, TerminalError};
use crate::scanner::Scan;
use crate::token::Token;
use crate::types::Types;

use std::vec::Vec;

pub struct LLParser {
    s: Box<dyn Scan>,
    tok: Token,
    errs: Vec<CompilerError>,
}

impl LLParser {
    pub fn new(s: Box<dyn Scan>) -> LLParser {
        let mut ll = LLParser {
            s,
            tok: Token::Unknown,
            errs: Vec::<CompilerError>::new(),
        };
        // prime the parser with the first token
        ll.consume_tok();
        ll
    }

    pub fn get_errors(&self) -> &Vec<CompilerError> {
        &self.errs
    }

    pub fn parse(&mut self) -> Result<Box<Ast>, TerminalError> {
        let prgm_node = self.program()?;

        if self.tok != Token::EOF {
            self.errs.push(CompilerError::Warning { line: self.s.line(), msg: String::from("Extraneous trailing characters") });
        }

        Ok(prgm_node)
    }

    fn consume_tok(&mut self) {
        self.tok = self.s.scan();
    }

    fn program(&mut self) -> Result<Box<Ast>, TerminalError> {
        let (name, line) = self.program_header()?;

        let (decls, body) = self.program_body()?;

        if self.tok != Token::Period {
            self.errs.push(CompilerError::Warning { line: self.s.line(), msg: String::from("Missing . after end program keyword") });
        }
        self.consume_tok();

        Ok(Box::new(Ast::Program {
            name,
            decls,
            body,
            line,
        }))
    }

    fn program_header(&mut self) -> Result<(String, u32), TerminalError> {
        if self.tok != Token::Program {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing program keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        let (identifier, _) = self.identifier()?;

        if self.tok != Token::Is {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing is keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok((identifier, line))
    }

    // first(program_body): "global", "procedure", "variable", "begin"
    fn program_body(&mut self) -> Result<(Vec<Box<Ast>>, Vec<Box<Ast>>), TerminalError> {
        let mut decls = Vec::new();
        while self.tok == Token::Global || self.tok == Token::Procedure || self.tok == Token::Variable {
            decls.push(self.declaration()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ; after declaration") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        if self.tok != Token::Begin {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing begin keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut stmts = Vec::new();
        while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) || self.tok == Token::If || self.tok == Token::For || self.tok == Token::Return {
            stmts.push(self.statement()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ;") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        if self.tok != Token::EndProgram {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing end program keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok((decls, stmts))
    }

    // first(declaration): "global", "procedure", "variable"
    fn declaration(&mut self) -> Result<Box<Ast>, TerminalError> {
        let is_global =
            if self.tok == Token::Global {
                self.consume_tok();
                true
            } else {
                false
            };

        match &self.tok {
            Token::Procedure => self.procedure_declaration(is_global),
            Token::Variable => {
                let (_, var_decl_node) = self.variable_declaration(is_global)?;
                Ok(var_decl_node)
            },
            _ => {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected declaration") });
                Err(TerminalError)
            },
        }
    }

    fn procedure_declaration(&mut self, is_global: bool) -> Result<Box<Ast>, TerminalError> {
        let (name, proc_type, params, line) = self.procedure_header()?;
        let (decls, body) = self.procedure_body()?;

        Ok(Box::new(Ast::ProcDecl {
            is_global: is_global,
            name,
            ty: proc_type,
            params,
            decls,
            body,
            line,
        }))
    }

    fn procedure_header(&mut self) -> Result<(String, Types, Vec<Box<Ast>>, u32), TerminalError> {
        if self.tok != Token::Procedure {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing procedure keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        let (identifier, _) = self.identifier()?;

        if self.tok != Token::Colon {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected :, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let return_type = self.type_mark()?;

        if self.tok != Token::LParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected (, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut params = Vec::new();
        if self.tok == Token::Variable {
            params = self.parameter_list()?;
        }
        let (param_types, param_nodes): (Vec<_>, Vec<_>) = params.into_iter().unzip();

        if self.tok != Token::RParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ), found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let parsed_type = Types::Proc(Box::new(return_type), param_types);

        Ok((identifier, parsed_type, param_nodes, line))
    }

    fn type_mark(&mut self) -> Result<Types, TerminalError> {
        match &self.tok {
            Token::IntType => {
                self.consume_tok();
                Ok(Types::Int)
            },
            Token::FloatType => {
                self.consume_tok();
                Ok(Types::Float)
            },
            Token::StringType => {
                self.consume_tok();
                Ok(Types::String)
            },
            Token::BoolType => {
                self.consume_tok();
                Ok(Types::Bool)
            },
            tok => {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected type (integer, float, string, bool), found {tok}") });
                Err(TerminalError)
            },
        }
    }

    // first(parameter_list): "variable"
    fn parameter_list(&mut self) -> Result<Vec<(Types, Box<Ast>)>, TerminalError> {
        let mut params = Vec::new();

        params.push(self.parameter()?);

        while self.tok == Token::Comma {
            self.consume_tok();

            params.push(self.parameter()?);
        }

        Ok(params)
    }

    fn parameter(&mut self) -> Result<(Types, Box<Ast>), TerminalError> {
        self.variable_declaration(false)
    }

    // first(procedure_body): "global", "procedure", "variable", "begin"
    fn procedure_body(&mut self) -> Result<(Vec<Box<Ast>>, Vec<Box<Ast>>), TerminalError> {
        let mut decls = Vec::new();
        while self.tok == Token::Global || self.tok == Token::Procedure || self.tok == Token::Variable {
            decls.push(self.declaration()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ; after declaration") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        if self.tok != Token::Begin {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing begin keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut stmts = Vec::new();
        while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) || self.tok == Token::If || self.tok == Token::For || self.tok == Token::Return {
            stmts.push(self.statement()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ;") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        if self.tok != Token::EndProcedure {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing end procedure keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok((decls, stmts))
    }

    fn variable_declaration(&mut self, is_global: bool) -> Result<(Types, Box<Ast>), TerminalError> {
        if self.tok != Token::Variable {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing variable keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        let (identifier, _) = self.identifier()?;

        if self.tok != Token::Colon {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected :, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut parsed_type = self.type_mark()?;

        if self.tok == Token::LSquare {
            // consume LSquare
            self.consume_tok();

            parsed_type = match &self.tok {
                Token::IntLiteral(bound) => Types::Array(*bound, Box::new(parsed_type)),
                tok => {
                    self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected integer literal, found {tok}") });
                    return Err(TerminalError);
                },
            };
            self.consume_tok();

            if self.tok != Token::RSquare {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ], found {}", self.tok) });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        let var_decl_node = Box::new(Ast::VarDecl {
            is_global: is_global,
            name: identifier,
            ty: parsed_type.clone(),
            line,
        });

        Ok((parsed_type, var_decl_node))
    }

    // first(statement): "identifier", "if", "for", "return"
    fn statement(&mut self) -> Result<Box<Ast>, TerminalError> {
        match &self.tok {
            Token::Identifier(_) | Token::Invalid(_) => Ok(self.assignment_statement()?),
            Token::If => Ok(self.if_statement()?),
            Token::For => Ok(self.loop_statement()?),
            Token::Return => Ok(self.return_statement()?),
            tok => {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected statement (assignment, if, for, or return), found {tok}") });
                Err(TerminalError)
            },
        }
    }

    fn assignment_statement(&mut self) -> Result<Box<Ast>, TerminalError> {
        let (dest_node, line) = self.destination()?;

        if self.tok != Token::Assign {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected :=, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let expr_node = self.expr()?;

        Ok(Box::new(Ast::AssignStmt {
            dest: dest_node,
            expr: expr_node,
            line,
        }))
    }

    fn destination(&mut self) -> Result<(Box<Ast>, u32), TerminalError> {
        let (var_id, var_line) = self.identifier()?;

        let var_node = Box::new(Ast::Var {
            id: var_id,
            line: var_line,
        });

        if self.tok != Token::LSquare {
            return Ok((var_node, var_line));
        }
        self.consume_tok();

        let expr_node = self.expr()?;

        if self.tok != Token::RSquare {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ], found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok((Box::new(Ast::SubscriptOp {
            array: var_node,
            index: expr_node,
        }), var_line))
    }

    fn if_statement(&mut self) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::If {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing if keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        if self.tok != Token::LParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected (, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let expr_node = self.expr()?;

        if self.tok != Token::RParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ), found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        if self.tok != Token::Then {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing then keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut then_body = Vec::new();
        while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) || self.tok == Token::If || self.tok == Token::For || self.tok == Token::Return {
            then_body.push(self.statement()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ;") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        let mut else_body = Vec::new();
        if self.tok == Token::Else {
            self.consume_tok();

            while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) || self.tok == Token::If || self.tok == Token::For || self.tok == Token::Return {
                else_body.push(self.statement()?);

                if self.tok != Token::Semicolon {
                    self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ;") });
                    return Err(TerminalError);
                }
                self.consume_tok();
            }
        }

        if self.tok != Token::EndIf {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing end if keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok(Box::new(Ast::IfStmt {
            cond: expr_node,
            then_body: then_body,
            else_body: else_body,
            line,
        }))
    }

    fn loop_statement(&mut self) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::For {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing for keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        if self.tok != Token::LParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected (, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let assign_stmt_node = self.assignment_statement()?;

        if self.tok != Token::Semicolon {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ; after loop initialization statement, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let expr_node = self.expr()?;

        if self.tok != Token::RParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ), found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut body = Vec::new();
        while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) || self.tok == Token::If || self.tok == Token::For || self.tok == Token::Return {
            body.push(self.statement()?);

            if self.tok != Token::Semicolon {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected ;") });
                return Err(TerminalError);
            }
            self.consume_tok();
        }

        if self.tok != Token::EndFor {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing end for keyword") });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok(Box::new(Ast::LoopStmt {
            init: assign_stmt_node,
            cond: expr_node,
            body: body,
            line,
        }))
    }

    fn return_statement(&mut self) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::Return {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Missing return keyword") });
            return Err(TerminalError);
        }
        let line = self.s.line();
        self.consume_tok();

        let expr_node = self.expr()?;

        Ok(Box::new(Ast::ReturnStmt {
            expr: expr_node,
            line,
        }))
    }

    // first(expr): "not", "(", "identifier", "-", "number", "string", "true", "false"
    fn expr(&mut self) -> Result<Box<Ast>, TerminalError> {
        let mut line = 0;
        let do_complement =
            if self.tok == Token::Not {
                line = self.s.line();
                self.consume_tok();
                true
            } else {
                false
            };

        let lhs_node = self.arith_op()?;

        let expr_node = self.expr_prime(lhs_node)?;

        if do_complement {
            Ok(Box::new(Ast::NotOp {
                operand: expr_node,
                line,
            }))
        } else {
            Ok(expr_node)
        }
    }

    fn expr_prime(&mut self, lhs_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::And && self.tok != Token::Or {
            return Ok(lhs_node);
        }

        let op = self.tok.clone();
        let line = self.s.line();
        self.consume_tok();

        let rhs_node = self.arith_op()?;

        let expr_node: Box<Ast> = match op {
            Token::And => {
                Box::new(Ast::AndOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                    line,
                })
            }
            _ => {
                Box::new(Ast::OrOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                    line,
                })
            }
        };

        self.expr_prime(expr_node)
    }

    // first(arith_op): "(", "identifier", "-", "number", "string", "true", "false"
    fn arith_op(&mut self) -> Result<Box<Ast>, TerminalError> {
        let lhs_node = self.relation()?;

        self.arith_op_prime(lhs_node)
    }

    fn arith_op_prime(&mut self, lhs_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::Add && self.tok != Token::Sub {
            return Ok(lhs_node);
        }

        let op = self.tok.clone();
        self.consume_tok();

        let rhs_node = self.relation()?;

        let arith_op_node: Box<Ast> = match op {
            Token::Add => {
                Box::new(Ast::AddOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                })
            }
            _ => {
                Box::new(Ast::SubOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                })
            }
        };

        self.arith_op_prime(arith_op_node)
    }

    // first(relation): "(", "identifier", "-", "number", "string", "true", "false"
    fn relation(&mut self) -> Result<Box<Ast>, TerminalError> {
        let lhs_node = self.term()?;

        self.relation_prime(lhs_node)
    }

    fn relation_prime(&mut self, lhs_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::LT && 
            self.tok != Token::LTE &&
            self.tok != Token::GT &&
            self.tok != Token::GTE &&
            self.tok != Token::Eq &&
            self.tok != Token::NotEq {
            return Ok(lhs_node);
        }

        let op = self.tok.clone();
        self.consume_tok();

        let rhs_node = self.term()?;

        let rel_op = match op {
            Token::LT => RelationOp::LT,
            Token::LTE => RelationOp::LTE,
            Token::GT => RelationOp::GT,
            Token::GTE => RelationOp::GTE,
            Token::Eq => RelationOp::Eq,
            _ => RelationOp::NotEq,
        };

        let rel_node = Box::new(Ast::Relation {
            op: rel_op,
            lhs: lhs_node,
            rhs: rhs_node,
        });

        self.relation_prime(rel_node)
    }

    // first(term): "(", "identifier", "-", "number", "string", "true", "false"
    fn term(&mut self) -> Result<Box<Ast>, TerminalError> {
        let lhs_node = self.factor()?;

        self.term_prime(lhs_node)
    }

    fn term_prime(&mut self, lhs_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::Mul && self.tok != Token::Div {
            return Ok(lhs_node);
        }

        let op = self.tok.clone();
        self.consume_tok();

        let rhs_node = self.factor()?;

        let term_node: Box<Ast> = match op {
            Token::Mul => {
                Box::new(Ast::MulOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                })
            }
            _ => {
                Box::new(Ast::DivOp {
                    lhs: lhs_node,
                    rhs: rhs_node,
                })
            }
        };

        self.term_prime(term_node)
    }

    // first(factor): "(", "identifier", "-", "number", "string", "true", "false"
    fn factor(&mut self) -> Result<Box<Ast>, TerminalError> {
        let tok = self.tok.clone();
        match tok {
            Token::Identifier(_) | Token::Invalid(_) => {
                let (id, id_line) = self.identifier()?;

                let var = Box::new(Ast::Var {
                    id: id,
                    line: id_line,
                });

                if self.tok == Token::LParen {
                    Ok(self.procedure_call_prime(var)?)
                } else {
                    Ok(self.name_prime(var)?)
                }
            }
            Token::Sub => {
                self.consume_tok();

                let tok = self.tok.clone();
                let negate_operand_node = match tok {
                    Token::Identifier(_) | Token::Invalid(_) => self.name()?,
                    Token::IntLiteral(val) => {
                        self.consume_tok();
                        Box::new(Ast::IntLiteral {
                            value: val,
                        })
                    }
                    Token::FloatLiteral(val) => {
                        self.consume_tok();
                        Box::new(Ast::FloatLiteral {
                            value: val,
                        })
                    }
                    tok => {
                        self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected identifier or numeric literal following -, found {tok}") });
                        return Err(TerminalError);
                    },
                };

                Ok(Box::new(Ast::NegateOp {
                    operand: negate_operand_node,
                }))
            }
            Token::IntLiteral(val) => {
                self.consume_tok();
                Ok(Box::new(Ast::IntLiteral {
                    value: val,
                }))
            }
            Token::FloatLiteral(val) => {
                self.consume_tok();
                Ok(Box::new(Ast::FloatLiteral {
                    value: val,
                }))
            }
            Token::LParen => {
                self.consume_tok();

                let factor_node = self.expr()?;

                if self.tok != Token::RParen {
                    self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ), found {}", self.tok) });
                    return Err(TerminalError);
                }
                self.consume_tok();

                Ok(factor_node)
            }
            Token::String(val) => {
                self.consume_tok();
                Ok(Box::new(Ast::StringLiteral {
                    value: val.clone(),
                }))
            }
            Token::True => {
                self.consume_tok();
                Ok(Box::new(Ast::BoolLiteral {
                    value: true,
                }))
            }
            Token::False => {
                self.consume_tok();
                Ok(Box::new(Ast::BoolLiteral {
                    value: false,
                }))
            }
            tok => {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected one of: (, -, numeric literal, string literal, boolean literal, identifier, found {tok}") });
                Err(TerminalError)
            },
        }
    }

    fn procedure_call_prime(&mut self, var_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::LParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected (, found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let mut args = Vec::new();
        if matches!(self.tok, Token::Identifier(_)) ||
            matches!(self.tok, Token::Invalid(_)) || 
            matches!(self.tok, Token::IntLiteral(_)) || 
            matches!(self.tok, Token::FloatLiteral(_)) || 
            matches!(self.tok, Token::String(_)) || 
            self.tok == Token::Not ||
            self.tok == Token::LParen ||
            self.tok == Token::True ||
            self.tok == Token::False ||
            self.tok == Token::Sub {
            args = self.argument_list()?;
        }

        if self.tok != Token::RParen {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ), found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        Ok(Box::new(Ast::ProcCall {
            proc: var_node,
            args: args,
        }))
    }

    // first(argument_list): "not", "(", "identifier", "-", "number", "string", "true", "false"
    fn argument_list(&mut self) -> Result<Vec<Box<Ast>>, TerminalError> {
        let mut args = Vec::new();

        args.push(self.expr()?);

        while self.tok == Token::Comma {
            self.consume_tok();

            args.push(self.expr()?);
        }

        Ok(args)
    }

    fn name(&mut self) -> Result<Box<Ast>, TerminalError> {
        let (var_id, var_line) = self.identifier()?;

        let var = Box::new(Ast::Var {
            id: var_id,
            line: var_line,
        });

        self.name_prime(var)
    }

    fn name_prime(&mut self, var_node: Box<Ast>) -> Result<Box<Ast>, TerminalError> {
        if self.tok != Token::LSquare {
            return Ok(var_node);
        }
        self.consume_tok();

        let expr_node = self.expr()?;

        if self.tok != Token::RSquare {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected ], found {}", self.tok) });
            return Err(TerminalError);
        }
        self.consume_tok();

        let sub_node = Box::new(Ast::SubscriptOp {
            array: var_node,
            index: expr_node,
        });

        Ok(sub_node)
    }

    fn identifier(&mut self) -> Result<(String, u32), TerminalError> {
        let mut ident = String::new();
        let mut has_invalid_chars = false;
        let mut num_idents = 0;
        match &self.tok {
            Token::Identifier(id) => {
                num_idents += 1;
                ident.push_str(id);
            },
            Token::Invalid(val) => {
                has_invalid_chars = true;
                if val == "_" {
                    self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Identifiers cannot begin with _") });
                }
                ident.push_str(val);
            },
            tok => {
                self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected identifier, found {tok}") });
                return Err(TerminalError);
            },
        }
        let line = self.s.line();
        self.consume_tok();

        while matches!(self.tok, Token::Identifier(_)) || matches!(self.tok, Token::Invalid(_)) {
            if let Token::Identifier(id) = &self.tok {
                num_idents += 1;
                ident.push_str(id);
            } else if let Token::Invalid(val) = &self.tok {
                has_invalid_chars = true;
                ident.push_str(val);
            }
            self.consume_tok();
        }

        if num_idents == 0 {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: String::from("Expected identifier, found invalid chars") });
            return Err(TerminalError);
        }

        if has_invalid_chars {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Identifier {ident} contains invalid chars") });
        } else if num_idents > 1 {
            self.errs.push(CompilerError::Error { line: self.s.line(), msg: format!("Expected identifier, found {num_idents} identifiers") });
        }

        Ok((ident, line))
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    struct TestScanner {
        toks: Vec<Token>,
        i: usize,
        line: u32,
    }

    impl TestScanner {
        fn new(toks: Vec<Token>) -> TestScanner {
            TestScanner {
                toks,
                i: 0,
                line: 1,
            }
        }
    }

    impl Scan for TestScanner {
        fn scan(&mut self) -> Token {
            if self.i < self.toks.len() {
                self.i += 1;
                self.toks[self.i-1].clone()
            } else {
                Token::Unknown
            }
        }

        fn line(&self) -> u32 {
            self.line
        }
    }

    #[test]
    fn llparse_parse() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Is,
            Token::Begin,
            Token::EndProgram,
            Token::Period,
            Token::EOF,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let act_ast = p.parse().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_ast = Box::new(Ast::Program {
            name: String::from("test_prgm"),
            decls: Vec::new(),
            body: Vec::new(),
            line: 1,
        });
        let exp_errs = &Vec::new();

        assert_eq!(act_ast, exp_ast);
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_parse_warn_extraneoustrailingchars() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Is,
            Token::Begin,
            Token::EndProgram,
            Token::Period,
            Token::Unknown,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let act_ast = p.parse().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_ast = Box::new(Ast::Program {
            name: String::from("test_prgm"),
            decls: Vec::new(),
            body: Vec::new(),
            line: 1,
        });
        let exp_errs =  &vec![
            CompilerError::Warning { line: 1, msg: String::from("Extraneous trailing characters") }
        ];

        assert_eq!(act_ast, exp_ast);
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Is,
            Token::Begin,
            Token::EndProgram,
            Token::Period,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let act_ast = p.program().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_ast = Box::new(Ast::Program {
            name: String::from("test_prgm"),
            decls: Vec::new(),
            body: Vec::new(),
            line: 1,
        });
        let exp_errs = &Vec::new();

        assert_eq!(act_ast, exp_ast);
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_warn_noperiod() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Is,
            Token::Begin,
            Token::EndProgram,
            Token::Unknown,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let act_ast = p.program().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_ast = Box::new(Ast::Program {
            name: String::from("test_prgm"),
            decls: Vec::new(),
            body: Vec::new(),
            line: 1,
        });
        let exp_errs =  &vec![
            CompilerError::Warning { line: 1, msg: String::from("Missing . after end program keyword") }
        ];

        assert_eq!(act_ast, exp_ast);
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_header() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Is,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let (act_name, _) = p.program_header().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_errs = &Vec::new();

        assert_eq!(act_name, String::from("test_prgm"));
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_header_terminalerr_missingprogram() {
        let toks = vec![
            Token::Unknown,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        p.program_header().expect_err(format!("Parse successful. Expected {:?}, found", TerminalError).as_str());
        let act_errs = p.get_errors();

        let exp_errs =  &vec![
            CompilerError::Error { line: 1, msg: String::from("Missing program keyword") }
        ];

        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_header_terminalerr_missingis() {
        let toks = vec![
            Token::Program,
            Token::Identifier(String::from("test_prgm")),
            Token::Unknown,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        p.program_header().expect_err(format!("Parse successful. Expected {:?}, found", TerminalError).as_str());
        let act_errs = p.get_errors();

        let exp_errs =  &vec![
            CompilerError::Error { line: 1, msg: String::from("Missing is keyword") }
        ];

        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_body_nodecl_nostmt() {
        let toks = vec![
            Token::Begin,
            Token::EndProgram,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let (act_decls, act_stmts) = p.program_body().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_decls = Vec::new();
        let exp_stmts = Vec::new();
        let exp_errs = &Vec::new();

        assert_eq!(act_decls, exp_decls);
        assert_eq!(act_stmts, exp_stmts);
        assert_eq!(act_errs, exp_errs);
    }

    #[test]
    fn llparse_program_body_singledecl_nostmts() {
        let toks = vec![
            Token::Variable,
            Token::Identifier(String::from("a")),
            Token::Colon,
            Token::IntType,
            Token::Semicolon,
            Token::Begin,
            Token::EndProgram,
        ];
        let s = TestScanner::new(toks);
        let mut p = LLParser::new(Box::new(s));

        let (act_decls, act_stmts) = p.program_body().expect("Parse failed");
        let act_errs = p.get_errors();

        let exp_decls = vec![
            Box::new(Ast::VarDecl { 
                is_global: false,
                name: String::from("a"),
                ty: Types::Int,
                line: 1,
            }),
        ];
        let exp_stmts = Vec::new();
        let exp_errs = &Vec::new();

        assert_eq!(act_decls, exp_decls);
        assert_eq!(act_stmts, exp_stmts);
        assert_eq!(act_errs, exp_errs);
    }
